# cnweather

./: Makefile.am  README  README.md  autoclean.sh  autogen.sh  configure.ac
data/: Makefile.am  cnWeather.desktop.in  cnweather.desktop.in  com.timxx.cnweather.gschema.xml.in.in
data/icons/: Makefile.am
data/themes/default/: Makefile.am  theme.xml
data/ui/: Makefile.am  about.glade  about.ui  main.glade  main.ui  menu.ui  preferences.ui  search.glade  search.ui  weather.glade  weather.ui
debian/: README  README.Debian  README.source  changelog  cnweather.cron.d.ex  cnweather.default.ex  cnweather.doc-base.EX  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
po/: POTFILES.in  POTFILES.skip  zh_CN.po
src/: Makefile.am  builder.c  builder.h  cnWeather.c  cnWeather.h  common.c  common.h  intl.h  main.c  signal_handler.c  tray.c  tray.h  weatherpage.c  weatherpage.h  weathertab.c  weathertab.h  weatherwidget.c  weatherwidget.h  wsettings.c  wsettings.h
src/lib/: Makefile.am  weather.c  weather.h
src/test/: Makefile.am  testlibweather.c
