themename=default

themedir=$(pkgdatadir)/themes/$(themename)

theme_DATA =	\
	00.png 01.png 02.png 03.png 04.png	\
	05.png 06.png 07.png 08.png 09.png	\
	10.png 11.png 12.png 13.png 14.png	\
	15.png 16.png 17.png 18.png 19.png	\
	20.png 21.png 22.png 23.png 24.png	\
	25.png 26.png 27.png 28.png 29.png	\
	30.png 31.png	\
	n00.png n01.png n03.png n04.png	\
	n05.png n18.png n29.png n30.png	\
	n31.png
